src/test/ui/pattern/usefulness/guards.stderr
error[E0004]: non-exhaustive patterns: `128_u8..=u8::MAX` not covered
  --> $DIR/guards.rs:12:11
   |
LL |     match 0u8 {
   |           ^^^ pattern `128_u8..=u8::MAX` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `u8`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
